src/test/ui/macros/issue-54441.rs
#![feature(macros_in_extern)]

macro_rules! m {
    () => {
        let //~ ERROR expected
    };
}

extern "C" {
    m!();
}

fn main() {}
